--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@ header {
     background-color: #f9e8cc;
     color: #fff;
     display: flex;
-    justify-content: space-between;
     align-items: center; /* Centraliza verticalmente */
     padding: 20px;
     text-align: center; /* Centraliza horizontalmente */
@@ -24,17 +23,16 @@ header {
     align-items: center;
 }
 
-
 .logo img {
-    margin-right: 10px;
-    width: 100px;
-    height: 100px;
+    width: 70%;
+    margin: 0 0 0 20%;
 }
 
 .usuario {
     display: flex;
     align-items: center;
     justify-content: flex-end;
+    margin-left: 67%;
 }
 
 .usuario img {
@@ -104,10 +102,14 @@ header {
     align-items: center;
 }
 
-
 main {
     text-align: center;
     padding: 20px;
+    background-color: #f9e8cc;
+    width: 400px;
+    height: 400px;
+    border-radius: 20px;
+    margin: 150px 0 0 750px;
 }
 
 .titulo {
@@ -124,9 +126,11 @@ main {
 }
 
 .conteudo {
-    font-family: 'Syne', sans-serif;
-    font-size: 16px;
+    font-family: Oswald;
+    font-size: 40px;
     line-height: 1.6;
+    color: #cc5c25;
+    font-weight: bold;
 }
 
 footer {
@@ -137,6 +141,8 @@ footer {
     bottom: 0;
     width: 100%;
     border-radius: 28px 28px 0 0;
+    font-family: sans-serif;
+    color: #cc5c25;
 }
 
 ul {
@@ -146,13 +152,17 @@ ul {
 
 li {
     margin-bottom: 10px;
+    font-family: Oswald;
+    font-size: 30px;
+    margin: 100px 0 0 0;
 }
 
 a {
-    color: #f9e8cc;
+    color: #cc5c25;
     text-decoration: none;
 }
 
 a:hover {
-    text-decoration: underline;
+    font-weight: bold;
+    transition: 0.5s;
 }
